# ai1001

./: .gitignore  LICENSE  README.md  git_cheat_sheet.md  sinnlos.md  slides.md  test.md
.github/workflows/: linter.yml  tests.yml
C/: CMakeLists.txt  Doxyfile  main.c
C/advent_of_code/: 01.c  CMakeLists.txt
C/checking/: CMakeLists.txt  checking.c  checking.h
C/printing/: CMakeLists.txt  printing.c  printing.h
C/sorting/: CMakeLists.txt  sorting.c  sorting.h
C/test/: CMakeLists.txt  README.md  checkingTest.cpp  sortingTest.cpp
Exercises/01-Git-and-Vim/: 01-Installation.md  02-Lerntagebuch.md  03-vim.md  04-vim-and-git.md
Exercises/02-Git-Basics/: 01-ssh-keys.md  02-git.md
Exercises/03-Git-Branching-and-Workflows/: 01-merge-racing.md  02-graph-tracing.md
Exercises/04-Git-Misc/: 01-GitHub-Setup.md  02-Pull-Request-Rock-Paper-Scissors.md
Exercises/06-Agile/: 01-Team-Repository.md  02-paper-planes.md  03-control-strategy.md
Exercises/07-Scrum/: 01-role-distribution.md  02-project-board.md  03-user-stories.md  04-actionable-tasks.md  05-project-board-automization.md
Exercises/08-DevOps/: 01a-Super-Linter-Java.md  01b-Super-Linter-C.md
Exercises/09-RegEx/: 01-Übungsblatt.md
Exercises/10-Testing-Debugging/: 01-tdd-sorting.md  02-tdd-password-checker.md  03-debug-sorting.md  04-debug-advent-of-code.md
Exercises/11-Clean-Code/: 01-refactoring.md
RegEx/: kaputt.txt  learnRegex.sh  services  solutions.md
